# cuttlefish

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  Makefile  Makefile.jetson  Makefile.ky  NOTES.md  README.md  Vagrantfile  bone.ky.sh  bone.pc.sh  build.sh  cmake.sh  compile.sh  copy.sh  deploy.sh  hosts.txt  jetson_build.sh  kill.sh  make.sh  osxbuild.sh  pibuild.sh  run.sh  screens.hosts  servers.sh  workshop_notes.txt
.mpssh/: hosts
ccvm/: README.md
ccvm/install/: chroot.sh  install.sh
ccvm/install/file/: auth.conf  puppet.conf  syslinux.cfg
ccvm/puppet/: site.pp
cmake/modules/: FindCrypto.cmake  FindEGL.cmake  FindGLES.cmake  FindGLV.cmake
cmake/toolchains/: ky.pi.osx.cmake  pi.osx.cmake
code/: install_dependencies.sh
code/ctl/: ctl_bcm.h  ctl_stopwatch.h
code/curtain/: install  life.c
code/examples/: xBasicApp.cpp  xBasicDraw.cpp  xBasicVsr.cpp  xBend.cpp  xCircle.cpp  xElectricField.cpp  xRender2Texture.cpp  xTwist.cpp
code/graphics/: Makefile  Readme.md  hosts.txt
code/graphics/ctl/: ShaderManager.h  cf_app.h  cf_appR2T.h  cf_sound.h  ctl_app.h  ctl_appR2T.h  ctl_bcm.h  ctl_camera.h  ctl_constants.h  ctl_egl.h  ctl_gfxdata.h  ctl_gfxmatrix.h  ctl_gl.h  ctl_gl_data.h  ctl_gl_fbo.h  ctl_gl_mbo.h  ctl_gl_shader.h  ctl_gl_texture.h  ctl_gl_vattrib.h  ctl_gl_vbo.h  ctl_glsl.h  ctl_gxlib.h  ctl_host.h  ctl_mainloop.h  ctl_matrix.h  ctl_mdraw.h  ctl_mesh.h  ctl_mglyph.h  ctl_osc.h  ctl_pipe.h  ctl_render.h  ctl_scene.h  ctl_screen.h  ctl_shader_manager.h  ctl_sound.h  ctl_stopwatch.h  ctl_throttle.h  ctl_timer.h  ctl_touch.h  ctl_util.h  (+1 more)
code/graphics/examples/: xBasicApp.cpp  xBasicAudio.cpp  xBasicDraw.cpp  xBasicMotionBlur.cpp  xBasicTutorial.cpp  xBasicVsr.cpp  xBend.cpp  xCircle.cpp  xComp.cpp  xComp2.cpp  xCurvature.cpp  xElectricField.cpp  xElements.cpp  xField.cpp  xFrame.cpp  xNetworkDraw.cpp  xSoundField.cpp  xSoundTest.cpp  xTwist.cpp  xVec.cpp
code/graphics/local/: Makefile
code/graphics/src/: cf_sound.cpp  ctl_sound.cpp  vsr_camera.cpp  vsr_gl_shader.cpp
code/graphics/tests/: berrygraphics.cpp  berryrender.cpp  blinksync.cpp  circle.cpp  contours.cpp  cpu_benchmark.cpp  egl_extensions.c  electric_feels.cpp  electric_feels_plus.cpp  electric_relay.cpp  glyphstest.cpp  hostTests.cpp  linesync.cpp  multiscreen.cpp  r2t_app.cpp  rampsync.cpp  render2texture.cpp  simple_app.cpp  sound_app.cpp  sound_bitches.cpp  touch_app.cpp  touch_send.cpp  touch_send_slovenia.cpp  touch_synth.cpp  vsr2test.cpp  vsrtest.cpp  xApptest.cpp
code/interfaces/: electric_feels.html  r2t.html
code/old/: oldmake.txt
code/scratch/: README.md  mac.cpp  mtp.cpp
code/scratch/audio/: Makefile
code/scratch/c++11/: Makefile  for_each_argument_with_variadic.cpp  unordered_map.cpp  use_auto_and_variadic.cpp  use_blocks.cpp  use_chrono.cpp  use_foreach_and_blocks.cpp  (+2 more)
code/scratch/sound/: CMakeLists.txt  Sound.h  gamma.cpp
code/scratch/sound/test/: clean  gamma.cpp  test.cpp
code/tests/: electric_feels_plus.cpp  glyphs.cpp  linesync.cpp  r2tsubapp.cpp  touch_send_slovenia.cpp
code/use_window/: Makefile
cross/: get_xtools  rsync_pi-root
ctl/: ctl_app.h  ctl_bone.h  ctl_egl.h  ctl_grid.h  ctl_host.h  ctl_osc.h  ctl_sim.h  ctl_timer.h  ctl_touch.h
ctl/temp/: gfx_displacement.h  gfx_hyper.h  hyperAmt_glsl.h  hypershader.h  meshshader_glsl.h  particleshader_glsl.h
docs/: configuring_top.txt  ljubljana_slovenia_mac_address.txt  mac-address.txt  sound_notes.txt
docs/dotssh/: authorized_keys  id_rsa.pi
docs/notes/: EXTRA.md  Makefile  NOTES.md  STRUT.md  TODO.md  extensions_dump.txt  mac-addresses.txt
docs/ssh/: config
example/: xAgents.cpp  xBasicApp.cpp  xField.cpp  xRawApp.cpp  xRenderApp.cpp
example/control/: xAgents_control.cpp
example/swarm/: old_sim.cpp  pi.cpp  sim.cpp  state.hpp  swarm.h
example/sync/: pi.cpp  sim.cpp  state.hpp
examples/: xAudio-cuttlebone.cpp  xAudio.cpp  xBasicApp.cpp  xBasicTutorial.cpp  xComp.cpp  xCuttlebone.cpp  xCuttleboneAudio.cpp  xDisplacementMap-cuttlebone.cpp  xDisplacementMap.cpp  xDraw.cpp  xEOYS.cpp  xElements.cpp  xElingsHall4x4-cuttlebone.cpp  xElingsHall4x4.cpp  xEmpty.cpp  xGraphics.cpp  xGridSpringMesh.cpp  xGridSpringMeshWithParticles.cpp  xIcosphereSpringMesh.cpp  xModelView.cpp  xMotor.cpp  xNetworkDraw.cpp  xRobotArm.cpp  xSwarm-cuttlebone.cpp  xSwarm.cpp
examples.fixme/: xAudio-cuttlebone.cpp  xCuttlebone.cpp  xCuttleboneAudio.cpp  xDisplacementMap-cuttlebone.cpp  xDisplacementMap.cpp  xEGLWindow.cpp  xEOYS.cpp  xEOYS_02.cpp  xElectricField.cpp  xElingsHallMonitorLayout.cpp  xField.cpp  xFrame.cpp  xGFX_App.cpp  xGraphics.cpp  xGrid-cuttlebone.cpp  xHyperShader-cuttlebone.cpp  xHyperShader.cpp  xKnot.cpp  xModelView.cpp  xRenderCircles.cpp  xSimplex.cpp  xVersor.cpp  xVersorBorders.cpp  xWaves  xWaves-cuttlebone.cpp  xWaves.cpp
examples.fixme/header/: Boundary.h
examples.fixme/old/: xBasicTutorial.cpp  xBend.cpp  xComp2.cpp
old_build_stuff/: Makefile  Makefile.cross.on.jetson  Makefile.jetson  Makefile.ky  bone.pc.sh  bonerender.pc.sh  deploy.sh  jetson.sh  onecompile.sh  screens.sh  servers.hosts
rpcc/: Vagrantfile
scratch/: default.pd
scratch/audio_node/: Makefile  audio.cpp  ctl_audio.h
scratch/c++11/: README.md  binary.console.color  use_lambda.cpp  use_range_for.cpp
scratch/hostname/: hostname.cpp
scratch/interface.js/: r2t.html
scratch/luajit/: luamap.cpp
scratch/mtp/: Makefile  README.md  mtp-threads.cpp  mtp.cpp  pairWith  takeDown  trackpads
scratch/sound/: FindALSA.cmake
scratch/sound/test/: CMakeLists.txt  FindGamma.cmake  FindSound.cmake  build
scratch/time/: simple_time.cpp
scratch/use_window/: EGLWindow.cpp  EGLWindow.hpp  Makefile  main.cpp
tests/: berrygraphics.cpp  circle.cpp  contours.cpp  hostTests.cpp  matrix.cpp  matrix_tests.cpp  osc_test.cpp  vsrtest.cpp
tests.fixme/: cpu_benchmark.cpp  electric_feels.cpp  renderFeedback.cpp  touch.cpp
tools/: distribute  linesync.maxpat  push  simulate-touch.maxpat
tools/pi-root/: sync
tools/scripts/: burn  mount-all  save  sync-pi-root  umount-all
tools/setup/: config  hosts.txt
(+38 files in other folders)
