set(CMAKE_TOOLCHAIN_FILE toolchain-raspberry-pi.cmake)
cmake_minimum_required(VERSION 2.8)
project(Sound)
set(SOURCES Sound.cpp RtAudio.cpp)
find_package(ALSA REQUIRED)
add_definitions(-D__LINUX_ALSA__)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${ALSA_INCLUDE_DIRS})
add_library(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} ${ALSA_LIBRARIES})
