set(CMAKE_TOOLCHAIN_FILE ../toolchain-raspberry-pi.cmake)
cmake_minimum_required(VERSION 2.8)
project(test)
set(CMAKE_MODULE_PATH .)
find_package(Sound REQUIRED)
find_package(Gamma REQUIRED)
set(SOURCES gamma.cpp)
include_directories(${GAMMA_INCLUDE_DIRS})
include_directories(${SOUND_INCLUDE_DIRS})
add_executable(gamma ${SOURCES})
target_link_libraries(gamma ${GAMMA_LIBRARIES} ${SOUND_LIBRARIES})
